--- a/src/main/java/com/shoptao/view/LoginForm.form
+++ b/src/main/java/com/shoptao/view/LoginForm.form
@@ -173,6 +173,7 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tahoma" size="24" style="0"/>
                 </Property>
+                <Property name="text" type="java.lang.String" value="abcdef"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JButton" name="btnOnOff">
